--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -23,7 +23,7 @@
             <h1>DevLink</h1>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Homee</a></li>
             <li><a href="#">Blogs</a></li>
             <li><a href="#">Forums</a></li>
             <li><a href="#">Ask a Question</a></li>
