--- a/projects/templates/projects/register.html
+++ b/projects/templates/projects/register.html
@@ -6,56 +6,98 @@
 {% block content %}
 <div class="form-container">
     <h2>Sign Up</h2>
+
+    {% if form.errors %}
+    <div class="alert alert-danger">
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ field.label }}: {{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
+
     <form method="post">
         {% csrf_token %}
         
         <div class="form-group">
             <label for="id_first_name">First Name:</label>
             <input type="text" name="first_name" id="id_first_name" required>
-
         </div>
+
         <div class="form-group">
             <label for="id_last_name">Last Name:</label>
-            {{ form.last_name }}
+            <input type="text" name="last_name" id="id_last_name" required>
         </div>
+
         <div class="form-group">
             <label for="id_email">Email:</label>
-            {{ form.email }}
+            <input type="email" name="email" id="id_email" required>
         </div>
+
         <div class="form-group">
             <label for="id_username">Username:</label>
-            {{ form.username }}
+            <input type="text" name="username" id="id_username" required>
         </div>
+
         <div class="form-group">
             <label for="id_grade_level">Grade Level:</label>
-            {{ form.grade_level }}
+            <input type="text" name="grade_level" id="id_grade_level" required>
         </div>
+
         <div class="form-group">
             <label for="id_concentration">Concentration:</label>
-            {{ form.concentration }}
+            <input type="text" name="concentration" id="id_concentration" required>
         </div>
+
         <div class="form-group">
             <label for="id_linkedin">LinkedIn (Optional):</label>
-            {{ form.linkedin }}
+            <input type="url" name="linkedin" id="id_linkedin">
         </div>
+
         <div class="form-group">
             <label for="id_github">GitHub (Optional):</label>
-            {{ form.github }}
+            <input type="url" name="github" id="id_github">
         </div>
+
         <div class="form-group">
             <label for="id_bio">Bio (Optional):</label>
-            {{ form.bio }}
+            <textarea name="bio" id="id_bio" rows="3"></textarea>
         </div>
+
         <div class="form-group">
             <label for="id_password1">Password:</label>
-            {{ form.password1 }}
+            <input type="password" name="password1" id="id_password1" required>
         </div>
+
         <div class="form-group">
             <label for="id_password2">Confirm Password:</label>
-            {{ form.password2 }}
+            <input type="password" name="password2" id="id_password2" required>
         </div>
         
         <button type="submit" class="btn">Register</button>
     </form>
 </div>
 {% endblock %}
+
+{% if form.errors %}
+    <div class="alert alert-danger">
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ field.label }}: {{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
