--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -9,7 +9,7 @@
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'projects/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'projects/main-styles.css' %}">
 </head>
 <body>
     <!-- Navbar -->
