--- a/projects/templates/projects/create_project.html
+++ b/projects/templates/projects/create_project.html
@@ -3,14 +3,52 @@
 {% block title %}Create Project{% endblock %}
 
 {% block content %}
-  <div class="container">
-    <h2>Create a New Project</h2>
-    <form method="POST">
-      {% csrf_token %}
-      <div class="form-group">
-        {{ form.as_p }}
+  <div class="container create-project-container d-flex justify-content-center align-items-center">
+    <div class="form-wrapper">
+      <div class="form-box">
+        <h2 class="text-center">Create a New Project</h2>
+        <form method="POST">
+          {% csrf_token %}
+          <div class="row">
+            <!-- Left Column (Title, Description, Topic) -->
+            <div class="col-md-6 left-side">
+              <div class="form-group">
+                <label for="id_title">Title:</label>
+                {{ form.title }}
+              </div>
+              <div class="form-group">
+                <label for="id_description">Description:</label>
+                {{ form.description }}
+              </div>
+              <div class="form-group">
+                <label for="id_topic">Topic:</label>
+                {{ form.topic }}
+              </div>
+            </div>
+
+            <!-- Right Column (Skills Gained, Requirements, GitHub) -->
+            <div class="col-md-6 right-side">
+              <div class="form-group">
+                <label for="id_skills_gained">Skills gained:</label>
+                {{ form.skills_gained }}
+              </div>
+              <div class="form-group">
+                <label for="id_requirements">Requirements:</label>
+                {{ form.skill_requirements }}
+              </div>
+              <div class="form-group">
+                <label for="id_github">GitHub:</label>
+                {{ form.github_link }}
+              </div>
+            </div>
+          </div>
+
+          <!-- Centered Button -->
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary">Create Project</button>
+          </div>
+        </form>
       </div>
-      <button type="submit" class="btn btn-primary">Create Project</button>
-    </form>
+    </div>
   </div>
 {% endblock %}
