--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -46,7 +46,7 @@
             <div class="user-card">
                 <div class="user-avatar-container">
                     {% if user.profile_picture %}
-                        <img src="{{ user.profile_picture.url }}" alt="{{ user.user.username }}" class="user-avatar">
+                        <img src="{{ user.userprofile.profile_picture|safe }}" alt="{{ user.user.username }}" class="user-avatar">
                     {% else %}
                         <img src="https://via.placeholder.com/50" alt="{{ user.user.username }}" class="user-avatar">
                     {% endif %}
