--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -19,15 +19,14 @@
             <div class="contributors-section">
                 <p>Contributors:</p>
                 <div class="contributors-list">
-
-                    
                     <a href="{% url 'profile' project.owner.username %}">
-                        {% if project.owner.userprofile.profile_picture %}
-                        <img src="{{ project.owner.userprofile.profile_picture|safe }}" alt="{{ project.owner.username }}" class="contributor-pic">
-                    {% else %}
-                        <img src="{% static 'default_profile_pic.png' %}" alt="Default Profile Picture" class="contributor-pic"> <!-- Fallback image -->
-                    {% endif %}
-                     </a>
+                        {% if project.owner.userprofile and project.owner.userprofile.profile_picture %}
+                            <img src="{{ project.owner.userprofile.profile_picture|safe }}" alt="{{ project.owner.username }}" class="contributor-pic">
+                        {% else %}
+                            <img src="{% static 'default_profile_pic.png' %}" alt="Default Profile Picture" class="contributor-pic"> <!-- Fallback image -->
+                        {% endif %}
+                    </a>
+                    
 
                     {% for member in project.members.all %}
                         <a href="{% url 'profile' member.username %}">
