--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -1094,7 +1094,7 @@ textarea {
 .navbar {
     width: 100vw;
     padding: 20px;
-    background-color: #005035;
+    background-color: #0e0e0e;
     color: white;
     display: flex;
     justify-content: space-between;
