--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -124,7 +124,8 @@
 
     <h4>GitHub Preview</h4>
     <a href="{{ project.github_link }}" target="_blank">
- 
+        <img src="https://api.urlbox.io/v1/hXXufaUIypyZYtri/png?url={{ project.github_link }}&thumb_width=800&quality=80">
+
     </a>
 
     <ul>
